<resources>
    <string name="app_name">Lab1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="admin_fragment_label">Administracion</string>
    <string name="management_fragment_label">Vista {destination}</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="careers_btn">Carreras</string>
    <string name="curses_btn">Cursos</string>
    <string name="professors_btn">Profesores</string>
    <string name="students_btn">Estudiantes</string>
    <string name="cicles_btn">Ciclos</string>
</resources>