<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".AdminFragment">

    <Button
        android:id="@+id/curses_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/curses_btn" />

    <Button
        android:id="@+id/careers_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/careers_btn" />

    <Button
        android:id="@+id/professors_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/professors_btn" />

    <Button
        android:id="@+id/students_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/students_btn" />

    <Button
        android:id="@+id/cicles_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cicles_btn" />
</LinearLayout>